General rehaul of the code

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<div class="content"></div>
 	<table class="outcome">
 		<tr>
-			<th></th><th>Player</th><th>CPU</th><th>Last Winner</th>
+			<th></th><th id="player1Name"></th><th id="player2Name"></th><th>Last Winner</th>
 		</tr>
 		<tr>
-			<td>Number of victories</td><td id="numberOfUserVictories">-</td><td id="numberOfCPUVictories">-</td><td id="winner">-</td>
+			<td>Number of victories</td><td id="numberOfUserVictories">-</td><td id="numberOfCPUVictories">-</td><td id="lastWinnerName">-</td>
 		</tr>
 	</table>
 	<!-- Modal -->
