--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="header">
-		<button id=startButton" onclick="startGame()">(Re)Start Game</button>
+		<div id=startButton class="button" onclick="restartGame()" onmousedown="addClicked(event)" onmouseup="removeClicked(event)">Restart Game</div>
 	</div>
 	<div class="content"></div>
 	<table class="outcome">
