Updated win message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 	<div class="header">
-		<div id=startButton class="button" onclick="restartGame()" onmousedown="addClicked(event)" onmouseup="removeClicked(event)">Restart Game</div>
+		<div id=startButton class="button" onclick="restartGame()" onmousedown="addClicked(event)">Restart Game</div>
+		<div id=resetButton class="button" onclick="resetScore()" onmousedown="addClicked(event)">Reset Score</div>
 	</div>
 	<div class="content"></div>
 	<table class="outcome">
